Release cut 19.1 (#673)
* RDM-7627 actioned review comments

* RDM-7627 actioned review comments

* RDM-7627 actioned review comments

* RDM-7627 updated error message

* RDM-7575 - removed unwanted param

* RDM-8043 - Fixed validation errors on ComplexTypes

* Revert "Rdm 7162 Assign Jurisdiction (#546)" (#574)

This reverts commit dfe14bca112b79ce496df9cc8d7bf0e8d034c4b3.

* RDM-7162 Add Jurisdictions (#577)

* RDM-7162: Automate Jurisdiction assignment – tactical solution

    [RDM-7162] (https://tools.hmcts.net/jira/browse/RDM-7162).

* RDM-7162: Automate Jurisdiction assignment – tactical solution

    [RDM-7162] (https://tools.hmcts.net/jira/browse/RDM-7162).

* RDM-8013: CVE failures on data-store-api deployment to Demo

* Revert "RDM-8013: CVE failures on data-store-api deployment to Demo"

This reverts commit 1835cb40

Co-authored-by: Tobias <it.consulting@tutanota.com>
Co-authored-by: Olawale Olanrewaju <olanrewajume@yahoo.com>
Co-authored-by: Ashley Noronha <ashleydeannoronha@gmail.com>
Co-authored-by: kiran.yenigala@hmcts.net <Yrlks1091327~>

* RDM-8057 additional validation for not allowing time in a date field

* RDM-8094 - disable issuer validation temporarily (#580)

* RDM-8057 updated the regex expression

* RDM-8057 updated the regex expression for dateTimeDisplay

* RDM-8057 minor changes

* RDM-8057 updated regex to allow space

* update readme

* use latest stable version

* replace deprecated placeholder with the new one

* RDM- 7800 - ShowConditions on Workbasket and Search Input fields (#566)

* RDM-7800 - ShowConditions on Workbasket and Search Input fields

* RDM-7800 - added validation for showConditions on Workbasket and Search Input fields

* RDM-7800 - unit tests for showConditions on Workbasket and Search Input fields parser

* RDM-7800 - updated test definition file to include showCondition on searchinput/workbasketinput tabs

* RDM-7800 - added more tests

* RDM-7800 